feat(products): create a product with its first variant
